# mosquito-air-defence

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  background_subtraction.py  blob_detection.py  cuda_test.cu  fancy_kalman.py  kalman_filter.py  laser_quali_4.txt  main.cpp  main.py  main2.cpp  main3.cpp  main_quali.txt  main_quali_1.txt  mos_quali_3.txt  mosquito.py  mosquito_tracker.py  nearest_neighbour_tracking.py  object_detector.py  plot_results.py  servos.ipynb  stepper_torque+speed.ipynb  test_kalman_filter.py  tracking_interface.py  tracking_quali.txt  tracking_quali_1.txt
Steppers/: Stepper_Motor_HAT_B_Code.7z  gpio_example  gpio_example.c
Steppers/Stepper_Motor_HAT_B_Code/Jetson nano/C/: main
c_cpp_system/: CMakeLists.txt  GPIOInterface.cpp  GPIOInterface.hpp  Makefile  debug.h  main  main.c  sysfs_gpio.c
c_cpp_system/detection/: CMakeLists.txt  detection.cpp
c_cpp_system/old_c_code/: main.c  sysfs_gpio.c
c_cpp_system/old_c_code/steppers/: controller.c  controller.h
c_cpp_system/src/: CMakeLists.txt  debug.hpp  main.cpp
c_cpp_system/src/gpio/: gpio.cpp  gpio.hpp
c_cpp_system/src/motors/: HR8825_driver.cpp  HR8825_driver.hpp  controller.cpp  controller.hpp
c_cpp_system/src/utilities/: utilities.cpp  utilities.hpp
c_cpp_system/steppers/: CMakeLists.txt  HR8825_driver.c  HR8825_driver.h
c_cpp_system/tests/: CMakeLists.txt
include/: blob_detection.hpp  camera.hpp  detection.hpp  frame.hpp  hungarian.hpp  image_processing.hpp  kalman.hpp  kalman_filter_2d.hpp  kalman_interface.hpp  kalman_no_eigen.hpp  labeling_algorithms.h  mads.hpp  mos.hpp  object_detector.hpp  pt.hpp  stepper.hpp  sys_flags.hpp  tracking.hpp  tracking_interface.hpp  turret.hpp  turret_controller.hpp  two_pass_algorithm.hpp  utils.hpp  yacclab_tensor.h
mosquito_data/: black-dot-bouncing-across.webm  squash-ball-rolling.webm
motor_calculations/: stepper_torque+speed.ipynb
motors/: servos.ipynb
old_c_code/: debug.h  sysfs_gpio.h
old_c_code/steppers/: controller.c
python/: main.py  object_detector.py  tracking_interface.py  working_with_video.ipynb
python/kalman_experiments/: kalman_filter.py  main_kalman.py
python/trackers/: kcf_tracker.py  nearest_neighbour_tracking.py
python/unit_tests/: test_kalman_filter.py
quali_data/laser_quali/: laser_quali_1.txt  laser_quali_2.txt  laser_quali_3.txt
quali_data/main_quali/: main_quali_1 (some id switching).txt  main_quali_2 (constant id switch).txt  main_quali_3 (some id switching).txt  main_quali_4.txt  main_quali_5.txt  main_quali_6.txt  main_quali_7 (some id switching).txt
quali_data/main_quali/faqed/: main_quali_3.txt
quali_data/main_quali/mooi/: main_quali_4 (prediction, 1 mos, 5 fps).txt  main_quali_5.txt  main_quali_6.txt
quali_data/mos_quali/: mos_quali_1.txt  mos_quali_2.txt  mos_quali_3.txt
quali_data/tracking_quali/: tracking_quali_2.txt
src/: CMakeLists.txt  background_subtractor.cpp  blob_detection.cpp  camera_calibration.cpp  detection.cpp  frame.cpp  hungarian.cpp  image_processing.cpp  image_processing.cu  kalman.cpp  kalman_no_eigen.cpp  labeling_algorithms.cc  labeling_allegretti_2019_BKE.cu  labeling_allegretti_2019_BUF.cu  mads.cpp  object_detector.cpp  stepper.cpp  tracking.cpp  turret.cpp  turret_controller.cpp  two_pass_algorithm.cpp  utils.cpp  video_interface.cpp  yacclab_tensor.cc
src/detection/: background_subtractor.cpp  background_subtractor.hpp  detection.cpp  object_detector.cpp  object_detector.hpp  videoInterface.cpp
src/motors/: HR8825_driver.cpp  HR8825_driver.hpp  controller.cpp  controller.hpp  turret_controller.cpp  turret_controller.hpp
src/turret/: hr8825_driver.cpp  hr8825_driver.hpp  turret_controller.cpp  turret_controller.hpp  turret_controller_old.cpp  turret_controller_old.hpp
src/utilities/: utils.cpp  utils.hpp
steppers_actual/: main
tests/turret/: hr8825_driver_test.cpp  turret_controller_test.cpp
trackers/: sort_tracker.py
